--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -45,7 +45,7 @@
 @advanced select customAppearance           "⚒️ Custom Appearance" ["Enabled", "Disabled"]
 @advanced select   likeDislike              "  🎨 Like/Dislike colors" {'Navy Blue': 'blueLD', 'Classic': 'classic', 'None': 'none'}
 @advanced checkbox oldBackground            "  🖼️ Old Background" 1
-@advanced checkbox oldPlaylists             "  😄 Old Playlists" 1
+@advanced checkbox oldPlaylists             "  🧓 Old Playlists" 1
 @advanced checkbox restoreOldIcon           "  🧓 Old Icons (Beta)" 0
 @advanced checkbox navigationBar            "  🌑 Dark Navigation Bar" 1
 @advanced checkbox searchBox                "  🌑 Dark Search Box" 0
@@ -79,7 +79,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         --dark-yt-spec-brand-background-primary: rgba(33, 33, 33, 0.98);
         --dark--yt-spec-10-percent-layer: rgba(255, 255, 255, 0.1);
     }
-
+    
     /* ❌ Anti-Shorts (Beta) */
     /* I can't find the way to remove all shorts using css alone */
     if (antiShorts) {
@@ -1072,6 +1072,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 display: none;
             }
         }
+    }
+
+    /* RIP other browser that doesn't support :has */    
+    /* Remove Unsubscribe button from bell icon flyout menu */
+    ytd-menu-service-item-renderer[use-icons]:has(tp-yt-paper-item[style-target="host"] > yt-icon.ytd-menu-service-item-renderer > svg > g path[d^="M13.72\,11.93C15.58\,11.59\,17\,9.96\,17\,8c0-2.21-1.79-4-4-4S9\,5.79\,9\,8c0\,1.96\,1.42\,3.59\,3.28\,3.93"]) {
+        display: none;
     }
 
 
